# mal-progress-box

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: schedule.yml
scripts/: get_mal_tokens.py
