[project]
name = "mal-progress-box"
version = "2.0.0"
description = "A GitHub Gist updater for a user's MyAnimeList stats"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "types-requests>=2.32.4.20250913",
]
